--- a/batch-norm/Batch_Normalization_Exercises.ipynb
+++ b/batch-norm/Batch_Normalization_Exercises.ipynb
@@ -38,11 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/oleg/.pyenv/versions/3.6.3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
@@ -69,10 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -104,10 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -141,11 +154,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch:  0: Validation loss: 0.69088, Validation accuracy: 0.10700\n",
+      "Batch: 25: Training loss: 0.33267, Training accuracy: 0.12500\n",
+      "Batch: 50: Training loss: 0.32754, Training accuracy: 0.12500\n",
+      "Batch: 75: Training loss: 0.32791, Training accuracy: 0.07812\n",
+      "Batch: 100: Validation loss: 0.32568, Validation accuracy: 0.09900\n",
+      "Batch: 125: Training loss: 0.32508, Training accuracy: 0.14062\n",
+      "Batch: 150: Training loss: 0.32421, Training accuracy: 0.14062\n",
+      "Batch: 175: Training loss: 0.32674, Training accuracy: 0.07812\n",
+      "Batch: 200: Validation loss: 0.32522, Validation accuracy: 0.09760\n",
+      "Batch: 225: Training loss: 0.32287, Training accuracy: 0.15625\n",
+      "Batch: 250: Training loss: 0.32597, Training accuracy: 0.14062\n",
+      "Batch: 275: Training loss: 0.32617, Training accuracy: 0.12500\n",
+      "Batch: 300: Validation loss: 0.32555, Validation accuracy: 0.11000\n",
+      "Batch: 325: Training loss: 0.32262, Training accuracy: 0.14062\n",
+      "Batch: 350: Training loss: 0.32458, Training accuracy: 0.14062\n",
+      "Batch: 375: Training loss: 0.32613, Training accuracy: 0.12500\n",
+      "Batch: 400: Validation loss: 0.32684, Validation accuracy: 0.09760\n",
+      "Batch: 425: Training loss: 0.32532, Training accuracy: 0.10938\n",
+      "Batch: 450: Training loss: 0.32478, Training accuracy: 0.14062\n",
+      "Batch: 475: Training loss: 0.32670, Training accuracy: 0.04688\n",
+      "Batch: 500: Validation loss: 0.32561, Validation accuracy: 0.10700\n",
+      "Batch: 525: Training loss: 0.32775, Training accuracy: 0.09375\n",
+      "Batch: 550: Training loss: 0.32631, Training accuracy: 0.09375\n",
+      "Batch: 575: Training loss: 0.32586, Training accuracy: 0.12500\n",
+      "Batch: 600: Validation loss: 0.32518, Validation accuracy: 0.10700\n",
+      "Batch: 625: Training loss: 0.32487, Training accuracy: 0.09375\n",
+      "Batch: 650: Training loss: 0.32397, Training accuracy: 0.14062\n",
+      "Batch: 675: Training loss: 0.32305, Training accuracy: 0.17188\n",
+      "Batch: 700: Validation loss: 0.32550, Validation accuracy: 0.11260\n",
+      "Batch: 725: Training loss: 0.32388, Training accuracy: 0.10938\n",
+      "Batch: 750: Training loss: 0.32507, Training accuracy: 0.10938\n",
+      "Batch: 775: Training loss: 0.32565, Training accuracy: 0.12500\n",
+      "Final validation accuracy: 0.11000\n",
+      "Final test accuracy: 0.10280\n",
+      "Accuracy on 100 samples: 0.15\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DO NOT MODIFY THIS CELL\n",
@@ -587,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
